<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/productmanagement"
        android:orderInCategory="100"
        android:title="@string/gestock"
        app:showAsAction="never" />
    <item
        android:id="@+id/apropos"
        android:orderInCategory="100"
        android:title="@string/apropos"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/decx"
        app:showAsAction="never" />
    <item
        android:id="@+id/addProduct"
        android:icon="@drawable/settingslogo"
        android:title="@string/settings"
        app:showAsAction="always" />
</menu>