<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription"
    >


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/nom"
        android:textSize="40px"/>

    <EditText
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nom"
        android:layout_alignParentStart="true"
        android:text="@string/prenom"
        android:textSize="50px"/>
    <EditText
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prenom"
        android:layout_alignParentStart="true"
        android:text="@string/tel"
        android:textSize="50px"/>

    <EditText
        android:id="@+id/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:inputType="phone"
        android:text="" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tel"
        android:layout_alignParentStart="true"
        android:text="@string/email"
        android:textSize="50px"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        android:text="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:text="@string/password"
        android:textSize="50px"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:text="@string/confirmPassword"
        android:textSize="50px"/>

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-19dp"
        android:layout_marginBottom="39dp"
        android:layout_toEndOf="@+id/textView8"
        android:background="@color/colorCyan"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="50px"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEnregistrer"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnAnnuler"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorCyan"
        android:text="@string/ins"
        android:textColor="@android:color/white"
        android:textSize="50px"
        android:textStyle="bold" />
</RelativeLayout>