<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <Button
        android:id="@+id/btnGeStock"
        android:layout_width="202dp"
        android:layout_height="297dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/colorCyan"
        android:text="@string/gestock"
        android:textColor="@android:color/white"
        android:textSize="50px"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSeting"
        android:layout_width="201dp"
        android:layout_height="297dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:textSize="50px"
        android:textStyle="bold"
        android:background="@android:color/background_dark"/>

    <Button
        android:id="@+id/btnApropos"
        android:layout_width="202dp"
        android:layout_height="297dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/apropos"
        android:textColor="@android:color/white"
        android:textSize="50px"
        android:textStyle="bold"
        android:background="@color/colorPink"/>

    <Button
        android:id="@+id/btnDecx"
        android:layout_width="201dp"
        android:layout_height="297dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/decx"
        android:textColor="@android:color/white"
        android:textSize="50px"
        android:textStyle="bold"
        android:background="@android:color/holo_red_dark"/>
</RelativeLayout>