<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductEdit"
        >


        <TextView
            android:id="@+id/namelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="36dp"
            android:text="@string/nom" />

    <TextView
        android:id="@+id/labelprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="122dp"
        android:text="@string/price" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelprice"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-75dp"
        android:layout_toEndOf="@+id/labelprice"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="155dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/labelquantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/labelprice"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="218dp"
        android:text="@string/quantity" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-34dp"
        android:layout_marginBottom="233dp"
        android:layout_toStartOf="@+id/name"
        android:text="@string/modified" />

    <TextView
        android:id="@+id/modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/name"
        android:layout_marginTop="-218dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-43dp"
        android:layout_marginBottom="146dp"
        android:layout_toStartOf="@+id/name"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/name"
        android:layout_marginTop="-137dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/buttoncorners"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="50px"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnModifier"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnAnnuler"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:text="@string/update"
        android:background="@drawable/buttoncorners"
        android:textColor="@android:color/white"
        app:backgroundTint="@android:color/holo_red_dark"
        android:textSize="50px"
        android:textStyle="bold"/>
</RelativeLayout>