<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/oldpasword"/>

    <EditText
        android:id="@+id/oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint=""
        android:inputType="textWebPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/newpassword"/>

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint=""
        android:inputType="textWebPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/newpasswordconfirm"/>

    <EditText
        android:id="@+id/newpasswordconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint=""
        android:inputType="textWebPassword" />


    <CheckBox
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/show"
        android:textColor="@android:color/black"
        android:textSize="20sp" />





</LinearLayout>